# xv6

./: .gitignore  README.md
doc/: ch1.md  ch2.md  ch3.md  scause.md
kernel/: .gdbinit  .gitignore  Cargo.toml  Makefile  build.rs
kernel/.cargo/: config
kernel/src/: entry.S  kalloc.rs  kernel.ld  main.rs  memlayout.rs  param.rs  printf.rs  proc.rs  riscv.rs  spinlock.rs  start.rs  string.rs  swtch.S  syscall.rs  sysfile.rs  sysproc.rs  trampoline.S  trap.rs  uart.rs  vm.rs
user/: build.py  makefile
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
