[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "=0.10.0"
bitflags = "=1.2.1"
volatile-register = "*"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# linked_list_allocator = "0.9.0"
buddy_system_allocator = "0.6"
spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

